Quick webkit fix for flickers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,13 +124,14 @@
 				-moz-transition-property: all;  
 				-moz-transition-duration: 1s;  
 				-webkit-transition-property: all;  
-				-webkit-transition-duration: 1s;  
+				-webkit-transition-duration: 1s;
+				-webkit-backface-visibility: hidden;
 				-o-transition-property: all;  
 				-o-transition-duration: 1s;
 				-ms-transition-property: all;  
 				-ms-transition-duration: 1s;
 				transition-property: all;  
-				transition-duration: 1s;  
+				transition-duration: 1s; 
 			}
 			.space-floating .tile {
 			    -moz-transform: scale(1.5, 1.5);
